# wf

./: .coderabbit.yaml  .gitignore  AGENTS.md  CONTEXT.md  ISSUES.md  authoring_sketch.md  big guy rambles.md  main.py  opencode.json  opencode.jsonc  pyproject.toml  readme.md  scratchpad.md  wf.config.example.json  wf_mcp.config.example.json  wf_mcp.config.json  wf_mcp_plan.md
.serena/: project.yml
docs/: AGENTS.md  README.md  authoring_sketch.md  core_state_mapping_and_merge.md  current_roadmap.md  durable_run_operations.md  fastmcp_notification_forwarding_issue_lda_tries.md  fastmcp_resource_link_issue_guide.md  fastmcp_resource_link_issue_lda_tries.md  mcp_protocol_proxy_inventory.md  mcp_stateful_runtime_plan.md  openapi_capability_source.md  path_mapping_scratch.md  project_map.md  schema_validation.md  scratchpad.md  source_architecture.md  source_provider_guide.md  structural_refs.md  wf_api_architecture.md  wf_authoring_control_flow.md  wf_cli.md  wf_core_architecture.md  wf_mcp_architecture.md  wf_mcp_capability_sources.md  wf_mcp_end_to_end_runbook.md  wf_mcp_operator_manual.md  wf_mcp_plan.md  wf_mcp_proxy_reality_and_roadmap.md  wf_mcp_troubleshooting.md  workflow_artifacts.md  workflow_capabilities.md  workflow_drafts.md
examples/: __init__.py  authoring_concurrent_foreach.py  authoring_control_flow.py  authoring_native_subgraph.py  authoring_native_subgraph_interrupt.py  authoring_workflow_as_node.py  demo_workflow.py  mcp_tool_workflow.py  mcp_workflow_surface.py  mcp_wrapper_authoring_flow.py  python_source_ops.py  raw_canonical_workflow.py  raw_concurrent_foreach.py  rpc_cli_smoke.py  wrapper_normalization.py  wrapper_status_route.py
scripts/: presentation-rehearsal-routes.json  presentation-rehearsal.ps1
stuff/: .gitignore  diagram.lua  diagram.patch  pandoc-diagram.ps1
tests/: test_authoring_node_decorator.py  test_authoring_ops.py  test_authoring_schemas.py  test_demo_workflow.py  test_this_shit_works.py  test_wf_mcp.py  test_wf_mcp_broker_server.py  test_wf_mcp_cli.py  test_wf_mcp_names.py  test_wf_mcp_sdk_adapter.py  test_wf_mcp_service.py  test_wf_mcp_store.py  test_wf_mcp_support.py  test_wf_mcp_transparent_proxy.py
web/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
wf_authoring/: __init__.py  builder.py  catalog.py  conditions.py  mapping.py  spec.py  subgraph.py
wf_core/: __init__.py  conditions.py  demo_workflow.py  errors.py  flow_ops.py  foreach_ops.py  frame_ops.py  interrupt_ops.py  model.py  node_exec.py  paths.py  run_factory.py  run_state.py  runtime.py  state_ops.py  step_handlers.py  validate.py
wf_mcp/: __init__.py  (+10 more)
(+1425 files in other folders)
