[project]
name = "lda-wf"
version = "0.0.1"
description = "Add your description here"
readme = "readme.md"
authors = [{ name = "lda", email = "lda@ldlda.com" }]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28",
    "jsonpatch>=1.33",
    "jsonschema>=4.26",
    "mcp[cli,rich]>=1",
    "openapi-core>=0.19",
    "pydantic>=2",
]

[project.scripts]
wf-mcp = "wf_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    # "pytest-sugar>=1",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

[tool.uv]
package = true

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff.format]
preview = false
