[project]
name = "lda-wf"
version = "0.0.1"
description = "Add your description here"
readme = "readme.md"
authors = [{ name = "lda", email = "lda@ldlda.com" }]
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.0",
    "fastapi-jsonrpc>=3.5.0",
    "fastmcp>=3.2.4",
    "httpx>=0.28",
    "jsonpatch>=1.33",
    "jsonschema>=4.26",
    "mcp[cli,rich]>=1",
    "openapi-core>=0.19",
    "pydantic>=2",
    "typer>=0.24.2",
    "uvicorn>=0.46.0",
]

[project.scripts]
wf = "wf_cli.app:main"
wf-mcp = "wf_mcp.cli:main"
wf-rpc-server = "wf_server.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "pytest>=8",
    # "pytest-sugar>=1",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider -n auto"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.uv]
package = true

[tool.basedpyright]
typeCheckingMode = "basic" # too many errors

[tool.ruff.format]
preview = false

[tool.ruff.lint]
extend-select = ["I"]
